<resources>
    <string name="app_name">Rabeta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="asatija">আসাতিযায়ে কেরাম</string>
    <string name="abna">আবনায়ে রাহমানিয়া</string>
    <string name="contact_komiti"> রাবেতা কমিটি </string>
    <string name="contact_jamat">জামাত প্রতিনিধি</string>
    <string name="solutio"> তথ্য সংশোধন</string>
    <string name="your_talk">রাবেতা পত্রিকা</string>
    <string name="your_talk1">রাবেতায়ে আবনায়ে রাহমানিয়া</string>


    <string name="phonetime">ফোন করার সময়</string>
    <string name="phonetime2">আছর - মাগরিব</string>


</resources>
