<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBE8E8"
    android:orientation="vertical"

    android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
   >

<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    ///////1
    <LinearLayout
        android:layout_marginBottom="10dp"

        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:padding="3dp"
            android:background="#ffffff"
            android:src="@drawable/crown"
            android:layout_width="80dp"
            android:layout_height="50dp" />
        <Button

            android:id="@+id/btn1"
            android:gravity="start"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/rip"
            android:textColor="#06125E"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/asatija"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

    </LinearLayout>


    //////////////2

    <LinearLayout
        android:layout_marginBottom="10dp"

        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:padding="3dp"

            android:background="#ffffff"
            android:src="@drawable/fita"
            android:layout_width="80dp"
            android:layout_height="50dp" />
        <Button
            android:gravity="start"
            android:id="@+id/btn2"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/rip"
            android:textColor="#06125E"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/abna"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

    </LinearLayout>
/////////////3



    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:padding="3dp"

            android:background="#ffffff"
            android:src="@drawable/comity"
            android:layout_width="80dp"
            android:layout_height="50dp" />
        <Button
            android:gravity="start"
            android:id="@+id/btn3"

            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/rip"
            android:textColor="#06125E"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/contact_komiti"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

    </LinearLayout>
  /////////////////////4


    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:padding="1dp"

            android:background="#ffffff"
            android:src="@drawable/jam"
            android:layout_width="80dp"
            android:layout_height="50dp" />
        <Button
            android:gravity="start"
            android:id="@+id/btn4"

            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/rip"
            android:textColor="#06125E"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/contact_jamat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

    </LinearLayout>
  ////////////////////5

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:padding="3dp"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:src="@drawable/sol" />
        <Button
            android:gravity="start"
            android:id="@+id/btn5"

            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/rip"
            android:textColor="#06125E"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/solutio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

    </LinearLayout>
    ////////////////////////6

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:padding="3dp"

            android:background="#ffffff"
            android:src="@drawable/bb"
            android:layout_width="80dp"
            android:layout_height="50dp" />
        <Button
            android:gravity="start"
            android:id="@+id/btn6"

            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/rip"
            android:textColor="#06125E"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/your_talk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

    </LinearLayout>





</LinearLayout>




</ScrollView>




</LinearLayout>