<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1"
    android:orientation="vertical"
    android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">


    //android:background="@drawable/corner"
    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="5dp"
        android:rowCount="3">


        <!-- ROW 1  -->
        <!-- COLUMN 1  -->


        <androidx.cardview.widget.CardView


            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="15dp"

            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/a1ripple"
                android:elevation="20dp"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView

                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:layout_gravity="center"
                    android:src="@drawable/crown" />


                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/asatija"
                    android:textAlignment="center"
                    android:textColor="#023632"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- COLUMN ramadan_shawal_c  -->

        <androidx.cardview.widget.CardView
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/a1ripple"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:layout_gravity="center"
                    android:src="@drawable/certificate" />


                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/abna"
                    android:textAlignment="center"
                    android:textColor="#023632"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <!-- ROW ramadan_shawal_c  -->
        <!-- COLUMN 1  -->

        <androidx.cardview.widget.CardView
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/a1ripple"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:layout_gravity="center"
                    android:src="@drawable/conference" />


                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/contact_komiti"
                    android:textAlignment="center"
                    android:textColor="#023632"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- COLUMN ramadan_shawal_c  -->

        <androidx.cardview.widget.CardView
            android:id="@+id/b4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/a1ripple"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:layout_gravity="center"
                    android:src="@drawable/message" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/contact_jamat"
                    android:textAlignment="center"
                    android:textColor="#023632"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/b5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/a1ripple"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:layout_gravity="center"
                    android:src="@drawable/sear" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/solutio"
                    android:textAlignment="center"
                    android:textColor="#023632"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- COLUMN ramadan_shawal_c  -->

        <androidx.cardview.widget.CardView
            android:id="@+id/b6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/a1ripple"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:layout_gravity="center"
                    android:src="@drawable/magazine" />

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/your_talk"
                    android:textAlignment="center"
                    android:textColor="#023632"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


</LinearLayout>